--- a/app.json
+++ b/app.json
@@ -6,19 +6,19 @@
    "telegram",
    "FiletoLinkBot"
   ],
- "repository": "https://github.com/TGExplore/TG-Files-to-Link",
+ "repository": "https://github.com/firsthub19/kFiles-to-Link",
  "env": {
    "TG_API_ID": {
       "description": "Your Telegram API ID. Get this value from my.telegram.org!",
-      "value": ""
+      "value": "22410413"
   },
    "TG_API_HASH": {
       "description": " Your Telegram API hash. Get this value from my.telegram.org!",
-      "value": ""
+      "value": "5be39e316e3647868c1b651b318c1077"
   },
    "TG_SESSION_NAME": {
       "description": "Run Console this (python3 GenerateStringSession.py) ",
-      "value": ""
+      "value": "tgfilestream"
   },
    "HOST": {
       "description": "Leave the Same Value",
@@ -27,11 +27,11 @@
   },
    "PUBLIC_URL": {
       "description": "The Heroku App URL similar to https://<appname>.herokuapp.com/",
-      "value": ""
+      "value": "http://localhost:8080"
   },
    "TG_START_MESG": {
       "description": "Set /start Message",
-      "value": ""
+      "value": "Seu link está sendo gerado"
   }
  }
 }
